--- a/apps/css/style.css
+++ b/apps/css/style.css
@@ -80,10 +80,11 @@
 .cont2 .cont_head .ico-cloud {display:block;width:12.9rem;height:6.1rem;margin:0 auto 3rem;background:url(../imgs/cont2-obj-cloud.png) 50% 50% no-repeat;background-size:12.9rem}
 .cont2 .cont_head .tx_tit {display:block;width:43.4rem;height:9.9rem;margin:0 auto;font-size:0;text-indent:-9999px;background:url(../imgs/cont2-tit.png) 50% 50% no-repeat;background-size:43.4rem}
 
-/* .scrollarea {overflow:hidden;position:relative;width:100%;height:calc(100% - 180px);}
-.frame__list {position:absolute;top:0;left:50%;transform:translateX(-50%)} */
-.flickSwiper {height:100%}
+/* 슬라이드 */
+.flickSwiper {height:100%;max-height:108rem}
 .flickSwiper .swiper-wrapper {-webkit-transition-timing-function:linear !important;-o-transition-timing-function:linear !important;transition-timing-function:linear !important;}
+.flickSwiper.swiper-container-horizontal>.swiper-scrollbar {bottom:.5rem;left:50%;max-width:42.8rem;height:.7rem;margin-left:-21.4rem;background-color:#aaddda;border-radius:.35rem}
+.flickSwiper .swiper-scrollbar-drag {max-width:42.8rem;background:#fff;box-shadow:4px 0px 11px .4px rgba(162, 202, 199, 43%)}
 .frame__list {position:relative;}
 .frame__list .frame {position:absolute;z-index:1;background-color:#fff;box-shadow:4px 0px 11px .4px rgba(162, 202, 199, 43%);box-sizing:border-box}
 .frame__list .frame__in {display:block;width:100%;height:100%;box-shadow:inset 1px 0 10px rgb(125 148 146 / 35%);background:#b3e7e4 url(../imgs/frame/p_img-bg.png) 50% 50% no-repeat;background-size:cover}
